# Algo-genetique

./: .gitignore  INSTALL.md  README.md  bayesian_opt.py  benchmark.py  benchmark_cuts.py  executeur_comparaison_algos.py  fitness.py  main.py  plot.py  pyproject.toml  rapport.tex  requirements.txt  resultsmanager.py  simulsmanager.py  tests_param.py
algo/: algogenetique.py  fitness.py  mutation.py  select.py  selection.py
data/: plasmid_2k_3.fasta  plasmid_test.fasta
data_algo/: benchmark_nbcuts0_nbappend1  exemple1  exemple3  exemple4  gsearch1a150_a20_a0.3_aelitiste_aFalse_a0_a1_aFalse  gsearch1a150_a20_a0.3_aelitiste_aTrue_a0_a1_aFalse  gsearch1a150_a20_a0.3_aroulette_exp_norm_aFalse_a0_a1_aFalse  gsearch1nb_individus1000_nb_generations40_taux_selec0.1_selection_typeelitiste_poissonTrue_nb_cuts0_nb_append1_recuitFalse  gsearch1nb_individus150_nb_generations20_taux_selec0.3_selection_typerang_geo_poissonFalse_nb_cuts0_nb_append1_recuitFalse  gsearch1nb_individus150_nb_generations20_taux_selec0.3_selection_typerang_geo_poissonTrue_nb_cuts0_nb_append1_recuitFalse  gsearch1nb_individus150_nb_generations20_taux_selec0.3_selection_typeroulette_exp_norm_poissonTrue_nb_cuts0_nb_append1_recuitFalse  gsearch1nb_individus150_nb_generations20_taux_selec0.3_selection_typetournament_poissonFalse_nb_cuts0_nb_append1_recuitFalse  gsearch1nb_individus150_nb_generations20_taux_selec0.3_selection_typetournament_poissonTrue_nb_cuts0_nb_append1_recuitFalse  test1
dna/: RotTable.py  Traj3D.py
documents/: Rapport.tex
scripts/: app_client.py  benchmark.py  benchmark_cuts.py  (+2 more)
(+31 files in other folders)
